[project]
name = "scheduletools"
version = "0.1.0"
description = "Tools for parsing, splitting, and expanding hockey schedule CSV files."
authors = [{name = "Khris", email = "your@email.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0",
    "click>=8.0"
]

[project.scripts]
schtool = "scheduletools.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
